# VPNCheck

./: .gitignore  .gitkeep  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.ps1  config.example.json  pyproject.toml  run-debug.bat  vpncheck.py
.github/workflows/: ci.yml
tests/: test_core.py
